data/derived/comb/progs/unify/prog8471.ml.out
Characters 31-32:
  explode w = w;;
              ^
Error: This expression has type string but an expression was expected of type
         char list
